--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <!-- <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-      crossorigin="anonymous"
-    /> -->
     <meta charset="utf-8" />
     
     <meta
@@ -28,6 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script type = "application/json"></script>
 
     <title>App</title>
   </head>
