took away css imports; changed user.js in database in order to pass in res, req props

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
     <script type = "application/json"></script>
 
-    <title>App</title>
+    <title>Cruz Hacks Challenge</title>
   </head>
   
   <body>
